# in-port-today

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cruises.yaml  weather.yaml
data/cruises/: 2024-04.json  2024-05.json  2024-06.json  2024-07.json  2024-08.json
data/weather/: 2024-04.json  2024-05.json  2024-06.json  2024-07.json  2024-08.json
in_port_today/: __init__.py  cli.py  constants.py  cruises.py  exceptions.py  json.py  weather.py
src/: table.html
