[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >=1.12.2",
  "hatch-vcs >=0.2.0",
]

[project]
name = "scrape"
version = 0.1
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Ken Odegard", email = "ken.odegard@gmail.com" }
]
maintainers = [
  {name = "Ken Odegard", email = "ken.odegard@gmail.com" }
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
  "beautifulsoup4",
  "click",
  "requests",
  "python-dateutil",
]

[project.scripts]
zippebike-cruise-calendar-scrape = "zipp_e_bikes.cruise:scrape"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"

[tool.hatch.build]
include = ["zipp_e_bikes"]

[tool.hatch.build.hooks.vcs]
version-file = "zipp_e_bikes/_version.py"
